fix(blog): fix single blog spacing

--- a/src/assets/scss/modules/_content.scss
+++ b/src/assets/scss/modules/_content.scss
@@ -11,6 +11,11 @@
       @include breakpoint(medium) {
         justify-content: center;
       }
+
+      .single-post & {
+        min-height: 10rem;
+        padding-top: 2.5 * $global-padding;
+      }
     }
     &-content {
       @include xy-cell(12);
